force-app/main/default/objects/custom_create250__c/custom_create250__c.object-meta.xml
<CustomObject>
    <label>Custom created object250</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects250</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>