force-app/main/default/objects/custom_create250__c/fields/custom_create_250field518__c.field-meta.xml
<CustomField>
    <fullName>custom_create_250field518__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 250field518</label>
    <type>Checkbox</type>
</CustomField>